2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/muine.schemas.in:
	* libmuine/metadata.c: (metadata_load), (metadata_get_mtime):
	* libmuine/metadata.h:
	* src/Action.cs:
	* src/ActionThread.cs:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/Metadata.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	First stab at async stuff. This is not yet done.. will finish
	tomorrow.

	Again, the DB format changed.

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:

	Added "es" and "nl" to ALL_LINGUAS.

2004-01-24  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/AddSongWindow.cs:
	* src/AmazonSearchService.cs:
	* src/AmazonSearchService.wsdl:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Try to fetch album covers that cannot be found on disc from
	amazon.com. 

	FIXME this still needs to be made asynchronous..

	The format of the databases has changed, so before
	complaining it doesn't work:
	!!!! rm ~/.gnome2/muine/*.db !!!!

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Release 0.2.1.

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* data/muine.schemas.in:
	* src/PlaylistWindow.cs:

	Merge save_playlist_as an open_playlist gconf keys.

2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/pointer-list-view.c: (scroll_to_path),
	(pointer_list_view_select_next), (pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:

	Scrolling improvements.

2004-01-23  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Better feedback when queueing songs.

2004-01-23  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
